crates/inertia-axum-macros/tests/ui/fail/invalid_attribute.rs
use inertia_axum_macros::InertiaPage;

#[derive(InertiaPage)]
#[inertia(component = "Bad", controller)]
struct Invalid { value: u32 }

fn main() {}
